Prevented horizontal overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,6 +15,7 @@ body {
   //max width for the pages
   & > div {
     max-width: 2000px;
+    overflow-x: hidden;
   }
 }
 html {
